5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1595_825.log
== TEST (2019-03-31 20:17:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import pi
area = pi*(r**2)
print(round(area, 3))

# Calculo do volume do circulo:
volume = 4/3*pi*(r**3)
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area = pi*(r**2)
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:18:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import pi
r = float(input("Insira o valor para o raio do circulo: "))
area = pi*(r**2)
print(round(area, 3))

# Calculo do volume do circulo:
volume = 4/3*pi*(r**3)
print(round(volume, 3))

-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:19:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import pi
r = float(input("Insira o valor para o raio do circulo: "))
area = pi*(r**2)
print(round(area, 3))

# Calculo do volume do circulo:
volume = 4/3*pi*(r**3)
print(round(volume, 3))

-- EXECUTION TIME:
0.160348
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
